# nekohub

./: .env  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  devenv.nix  docker-compose.yaml  flake.nix
.sqlx/: query-0d4068404df67802f730435c9a723b2dd3f3f7aa23bdfadc8d9ddaece75dd84d.json  query-0da1b7ece9641ea22c3239307985884cfe09c2d165e1ea11a3c6e9cd0c64d64a.json  query-11aeaae3d552c661f4e43a2918ad3f7dcdd4b040ee3d0bb6b3a8b9ee0ad6a832.json  query-1cff7036a5fad8e72701d14ad407a932eefdf7d6cbec231d849ea26a59b723c0.json  query-376272b26949d3c12e5becaf4ea9d8f977bef6f9bf944017e33221cc3ed95508.json  query-52fe12ef3d3b38ba4daf72eb0cf777814547bd4297f64044e3a982daeac130a1.json  query-56455a89e33ae515d1b001383cd1e4ce1b79a51d757bbf62ff557e4b094bbfdd.json  query-69a61e31da054e2fbba90c0c9620a1f0f66cd042ce94702783d1671340c6eb7b.json  query-76dc9d6975d08b8c7eb1eb6aec71356734497bd2bf6da490955c20da10765d39.json  query-80adefd4d76f531f29b4207c49a24572a10baf88551d0ec57be07f309d3d225c.json  query-b85f8586649340161dc72e41dabb1943aa137a4b0d18a58346d3a19f50f38dc2.json  query-c37b4b50d90bda619576d9c7c7e3a3fc33a5b3126f8c28591841fb235b85b830.json  query-c5c60cad0b05bd8f742061e45ddab57d6a1f3a1ec68fb700d7cffa5e6aa1cda2.json  query-ce33bd9ee62245bcb0a8efad0093c237e09eaf95dd4383798d2233c61c94ebb5.json  query-ef9455b283a786092ad2774cdff739fd3bd0bc9276e6300a7039103cec0bb898.json  query-f1cb45d6511b8d6f6cbaed7c02b460d3e696115ba16ec01175ca33c18c304d2d.json  query-f98530baa7cbf1b8e7f31e2102a0214e6cfb6fc6a1f2350adc3994adfc33a3df.json  query-fe92e37aa9f0cb308163364022bcbc92dee281a5535fca587d419589b35d8281.json
configuration/: application.toml
migrations/: 01_create_users_table.sql  02_add_lowercase_index_on_user_table.sql  03_create_sessions_table.sql  04_add_roles.sql  05_add_permissions.sql  06_add_management_permission.sql  07_create_user_info_view.sql  08_add_bio_to_users_col.sql  09_add_topics_table.sql  10_add_owner_field_to_topics_and_posts_table.sql
src/: auth.rs  configuration.rs  error.rs  handlers.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/handlers/: topic.rs  user.rs
src/models/: user.rs
tests/api/: helpers.rs  main.rs  topic.rs  user.rs  users.rs
