[package]
name = "nekohub"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
anyhow = "1"
axum = "0.8"
tower-http = { version = "0.6.8", features = ["trace"] }
serde = "1"
serde_json = "1"
argon2 = { version = "0.5.3", features = ["rand"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.22", features = [
  "env-filter",
  "registry",
] }
tracing-log = "0.2.0"
config = "0.15.19"
thiserror = "2"
chrono = "0.4.43"

[dependencies.sqlx]
version = "0.8.6"
features = ["macros", "runtime-tokio-rustls", "postgres"]
