[package]
name = "nekohub"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
anyhow = "1"
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6.8", features = ["trace"] }
serde = "1"
serde_json = "1"
argon2 = { version = "0.5.3", features = ["rand"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.22", features = [
  "env-filter",
  "registry",
] }
tracing-log = "0.2.0"
config = "0.15.19"
thiserror = "2"
chrono = "0.4.43"
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
sha2 = "0.10.9"
humantime = "2.3.0"
humantime-serde = "1.1.1"

[dependencies.sqlx]
version = "0.8.6"
features = ["macros", "runtime-tokio-rustls", "postgres", "chrono"]

[dev-dependencies]
reqwest = { version = "0.13.2", features = ["json"] }
url = "2.5.8"
